<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="user_name">Pedro Massango</string>
    <string name="android">Android</string>
    <string name="track">Track:</string>
    <string name="country">Country:</string>
    <string name="user_email">pedromassango.developer@gmail.com</string>
    <string name="user_country">Angola</string>
    <string name="emal">Emal:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="user_username">\@pedromassango</string>
    <string name="slack_username">Slack Username:</string>
    <string name="user_phone_number">+244 948020308</string>
</resources>
